--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,21 @@
 /* You can add global styles to this file*/
 
+
 * {
   padding: 0px;
   margin: 0px;
   border: none;
+  box-sizing: border-box;
+  font-family: 'Arial, sans-serif',
+}
+
+body {
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 *,
