--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,4 @@
-/*
-!* You can add global styles to this file*!
-
+//You can add global styles to this file
 
 * {
   padding: 0px;
@@ -8,7 +6,6 @@
   border: none;
   box-sizing: border-box;
 }
-
 
 *,
 *::before,
@@ -26,22 +23,22 @@ a:active {
   outline: none;
 }
 
-!* Links *!
+//Links
 
 a,
 a:link,
 a:visited {
-  !* color: inherit; *!
+  color: inherit;
   text-decoration: none;
-  !* display: inline-block; *!
+  display: inline-block;
 }
 
 a:hover {
-  !* color: inherit; *!
+  color: inherit;
   text-decoration: none;
 }
 
-!* Common *!
+// !* Common *!
 
 aside,
 nav,
@@ -80,7 +77,7 @@ address {
   font-style: normal;
 }
 
-!* Form *!
+// !* Form *!
 
 input,
 textarea,
@@ -120,4 +117,4 @@ label {
 
 legend {
   display: block;
-}*/
+}
