--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,9 @@
-
-//You can add global styles to this file
-
 * {
   padding: 0px;
   margin: 0px;
   border: none;
   box-sizing: border-box;
 }
-
 
 a,
 a:link,
@@ -16,46 +12,10 @@ a:visited {
   // display: inline-block;
 }
 
-/*
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-:focus,
-:active {
-  outline: none;
-}
-
-a:focus,
-a:active {
-  outline: none;
-}
-
-//Links
-
 a,
 a:link,
 a:visited {
   text-decoration: none;
-}
-
-a:hover {
-  color: inherit;
-  text-decoration: none;
-}
-
-// !* Common *!
-
-aside,
-nav,
-footer,
-header,
-section,
-main {
-  display: block;
 }
 
 ul,
@@ -63,58 +23,97 @@ ul li {
   list-style: none;
 }
 
-img {
-  vertical-align: top;
-}
+// *,
+// *::before,
+// *::after {
+//   box-sizing: border-box;
+// }
 
-img,
-svg {
-  max-width: 100%;
-  height: auto;
-}
+// :focus,
+// :active {
+//   outline: none;
+// }
 
-address {
-  font-style: normal;
-}
+// a:focus,
+// a:active {
+//   outline: none;
+// }
 
-// !* Form *!
+// a,
+// a:link,
+// a:visited {
+//   text-decoration: none;
+// }
 
-input,
-textarea,
-button,
-select {
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  background-color: transparent;
-}
+// a:hover {
+//   color: inherit;
+//   text-decoration: none;
+// }
 
-input::-ms-clear {
-  display: none;
-}
+// aside,
+// nav,
+// footer,
+// header,
+// section,
+// main {
+//   display: block;
+// }
 
-button,
-input[type='submit'] {
-  box-shadow: none;
-  cursor: pointer;
-}
+// ul,
+// ul li {
+//   list-style: none;
+// }
 
-input:focus,
-input:active,
-button:focus,
-button:active {
-  outline: none;
-}
+// img {
+//   vertical-align: top;
+// }
 
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
+// img,
+// svg {
+//   max-width: 100%;
+//   height: auto;
+// }
 
-label {
-  cursor: pointer;
-}
+// address {
+//   font-style: normal;
+// }
 
-legend {
-  display: block;
-}
+// input,
+// textarea,
+// button,
+// select {
+//   font-family: inherit;
+//   font-size: inherit;
+//   color: inherit;
+//   background-color: transparent;
+// }
+
+// input::-ms-clear {
+//   display: none;
+// }
+
+// button,
+// input[type='submit'] {
+//   box-shadow: none;
+//   cursor: pointer;
+// }
+
+// input:focus,
+// input:active,
+// button:focus,
+// button:active {
+//   outline: none;
+// }
+
+// button::-moz-focus-inner {
+//   padding: 0;
+//   border: 0;
+// }
+
+// label {
+//   cursor: pointer;
+// }
+
+// legend {
+//   display: block;
+// }
