--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,97 +23,97 @@ ul li {
   list-style: none;
 }
 
-// *,
-// *::before,
-// *::after {
-//   box-sizing: border-box;
-// }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-// :focus,
-// :active {
-//   outline: none;
-// }
+:focus,
+:active {
+  outline: none;
+}
 
-// a:focus,
-// a:active {
-//   outline: none;
-// }
+a:focus,
+a:active {
+  outline: none;
+}
 
-// a,
-// a:link,
-// a:visited {
-//   text-decoration: none;
-// }
+a,
+a:link,
+a:visited {
+  text-decoration: none;
+}
 
-// a:hover {
-//   color: inherit;
-//   text-decoration: none;
-// }
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
 
-// aside,
-// nav,
-// footer,
-// header,
-// section,
-// main {
-//   display: block;
-// }
+aside,
+nav,
+footer,
+header,
+section,
+main {
+  display: block;
+}
 
-// ul,
-// ul li {
-//   list-style: none;
-// }
+ul,
+ul li {
+  list-style: none;
+}
 
-// img {
-//   vertical-align: top;
-// }
+img {
+  vertical-align: top;
+}
 
-// img,
-// svg {
-//   max-width: 100%;
-//   height: auto;
-// }
+img,
+svg {
+  max-width: 100%;
+  height: auto;
+}
 
-// address {
-//   font-style: normal;
-// }
+address {
+  font-style: normal;
+}
 
-// input,
-// textarea,
-// button,
-// select {
-//   font-family: inherit;
-//   font-size: inherit;
-//   color: inherit;
-//   background-color: transparent;
-// }
+input,
+textarea,
+button,
+select {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background-color: transparent;
+}
 
-// input::-ms-clear {
-//   display: none;
-// }
+input::-ms-clear {
+  display: none;
+}
 
-// button,
-// input[type='submit'] {
-//   box-shadow: none;
-//   cursor: pointer;
-// }
+button,
+input[type='submit'] {
+  box-shadow: none;
+  cursor: pointer;
+}
 
-// input:focus,
-// input:active,
-// button:focus,
-// button:active {
-//   outline: none;
-// }
+input:focus,
+input:active,
+button:focus,
+button:active {
+  outline: none;
+}
 
-// button::-moz-focus-inner {
-//   padding: 0;
-//   border: 0;
-// }
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
 
-// label {
-//   cursor: pointer;
-// }
+label {
+  cursor: pointer;
+}
 
-// legend {
-//   display: block;
-// }
+legend {
+  display: block;
+}
