--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,8 @@ a:active {
   outline: none;
 }
 
+//Links
+
 a,
 a:link,
 a:visited {
@@ -49,6 +51,8 @@ a:hover {
   color: inherit;
   text-decoration: none;
 }
+
+// !* Common *!
 
 aside,
 nav,
@@ -77,6 +81,8 @@ svg {
 address {
   font-style: normal;
 }
+
+// !* Form *!
 
 input,
 textarea,
